# ghostim

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  Justfile  README.md  install.ps1  install.sh
.github/workflows/: release.yml
include/ghostim/: args.h  batch.h  endian.h  io.h  jpeg_parser.h  platform.h  png_parser.h  webp_parser.h
src/: args.c  batch.c  jpeg_parser.c  main.c  platform.c  png_parser.c  webp_parser.c
